--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>6 cities</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/not-found.css">
+  <link rel="stylesheet" href="css/map.css">
 </head>
 
 <body>
